clusters/prod-cluster/infrastructure/base/cert-manager/acme-dns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-dns
  namespace: cert-manager
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: "acme.numinia.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acme-dns-api
            port:
              number: 80
